--- a/services.html
+++ b/services.html
@@ -48,11 +48,13 @@
     <main>
       <div class="services-info">
         <span class="facilities">FACILITIES</span>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. In facere provident mollitia et. Quam provident consectetur delectus inventore temporibus perferendis sapiente repellat, voluptate doloremque reiciendis. Maiores provident ad beatae blanditiis?</P>
+        <p>We want your stay at our lush hotel to be truly unforgettable.  That is why we give special attention to all of your needs so 
+          that we can ensure an experience quite uniquw. Luxury hotels offers the perfect setting with stunning views for leisure
+          and our modern luxury resort facilities will help you enjoy the best of all. </p>
       </div>
       <div class="services-image-products">
         <div class="first-image">
-          <img src="./img/gym.jpeg" alt="img-hotel">
+          <img src="./img/gym01.jpg" alt="img-hotel">
           <span class="name-services-product">THE GYM</span>
         </div>
         <div class="first-image">
@@ -60,19 +62,19 @@
           <span class="name-services-product">POOLSIDE BAR</span>
         </div>
         <div class="first-image">
-          <img src="./img/spa.jpeg" alt="img-hotel">
+          <img src="./img/spa01.jpeg" alt="img-hotel">
           <span  class="name-services-product">THE SPA</span>
         </div>
         <div class="first-image">
-          <img src="./img/gym.jpeg" alt="img-hotel">
+          <img src="./img/piscina01.jpg" alt="img-hotel">
           <span class="name-services-product">SWIMMING POOL</span>
         </div>
         <div class="first-image">
-          <img src="./img/gym.jpeg" alt="img-hotel">
+          <img src="./img/restaurant02.jpeg" alt="img-hotel">
           <span class="name-services-product">RESTAURANT</span>
         </div>
         <div class="first-image">
-          <img src="./img/gym.jpeg" alt="img-hotel">
+          <img src="./img/bianca-jordan-o7SvheEZoks-unsplash 1.jpg" alt="img-hotel">
           <span class="name-services-product">LAUNDRY</span>
         </div>
       </div>
