--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hotel Californiaa</title>
+  <title>Hotel California</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
@@ -27,13 +27,13 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="Contactos.html" style="color: white;">Contactos</a><!--LUIS-->
+            <a class="nav-link" href="Servicios.html" style="color: white;">Contactos</a><!--LUIS-->
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Galeria.html" style="color: white;">Galeria de Imagenes</a><!--PABLO-->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Servicios.html" style="color: white;">Servicios</a><!--OMAR-->
+            <a class="nav-link" href="Contacto.html" style="color: white;">Servicios</a><!--OMAR-->
           </li>
         </ul>
         
