--- a/contacto.html
+++ b/contacto.html
@@ -50,47 +50,35 @@
   <!--CONTENIDO-->
 
   
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://www.murhotels.com/cache/40/b3/40b3566310d686be665d9775f59ca9cd.jpg" class="d-block w-100" alt="..." width="650px" height="650">
-        
-        <div class="carousel-caption d-none d-md-block" style="color: black;">
-          <h1 class="texto">HOTEL CALIFORNIA</h1>
-          
-          <h3 class="texto-contenido">BIENVENIDOS HOTEL 5 ESTRELLAS CALIFORNIA BOLIVIA. DISFRUTA TU ESTADIA CON NOSOTROS.</h3>
-        </div>
+  <div class="container mt-4">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>Get in Touch</h2>
+        <p>Use the form below to send us an email.</p>
+        <form>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name" placeholder="Enter your name">
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter your email">
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea class="form-control" id="message" rows="5"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
       </div>
-      <div class="carousel-item">
-        <img src="http://www.hotelcarina.com.tr/images/slider-main1.jpg" class="d-block w-100" alt="..." width="650px" height="650">
-        <div class="carousel-caption d-none d-md-block" style="color: black;">
-          <h1 class="texto">HOTEL CALIFORNIA</h1>
-          <h3 class="texto-contenido">BIENVENIDOS HOTEL 5 ESTRELLAS CALIFORNIA BOLIVIA. DISFRUTA TU ESTADIA CON NOSOTROS.</h3>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="https://www.murhotels.com/uploads/cms/pages/vista-piscina-buenos-aires_ZB6b4al.jpg" class="d-block w-100" alt="..." width="650px" height="650">
-        <div class="carousel-caption d-none d-md-block" style="color: black;">
-          <h1 class="texto">HOTEL CALIFORNIA</h1>
-          <h3 class="texto-contenido">BIENVENIDOS HOTEL 5 ESTRELLAS CALIFORNIA BOLIVIA. DISFRUTA TU ESTADIA CON NOSOTROS.</h3>
-        </div>
+      <div class="col-md-4">
+        <h2>Contact Information</h2>
+        <p><strong>Address:</strong> 123 Main St, Anytown USA</p>
+        <p><strong>Phone:</strong> 555-555-5555</p>
+        <p><strong>Email:</strong> info@example.com</p>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
-
 
 
   <!--CONTENIDO-->
