--- a/contacto.html
+++ b/contacto.html
@@ -48,38 +48,46 @@
 
 
   <!--CONTENIDO-->
-
+<br>
+<br>
   
   <div class="container mt-4">
     <div class="row">
-      <div class="col-md-8">
-        <h2>Get in Touch</h2>
-        <p>Use the form below to send us an email.</p>
+      <div class="col-md-7">
+        <h2>Bienvenido a la pagina de contacto</h2>
+        <p>Usa el formulario de abajo para enviarnos un e-mail.</p>
         <form>
           <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="Enter your name">
+            <label for="name">Nombre</label>
+            <input type="text" class="form-control" id="name" placeholder="Ingresa tu nombre">
           </div>
           <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter your email">
+            <input type="email" class="form-control" id="email" placeholder="Ingresa tu email">
           </div>
           <div class="form-group">
-            <label for="message">Message</label>
+            <label for="message">Mensaje</label>
             <textarea class="form-control" id="message" rows="5"></textarea>
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <br>
+          <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
       </div>
       <div class="col-md-4">
-        <h2>Contact Information</h2>
-        <p><strong>Address:</strong> 123 Main St, Anytown USA</p>
-        <p><strong>Phone:</strong> 555-555-5555</p>
-        <p><strong>Email:</strong> info@example.com</p>
+        <h2>Nuestro contacto directo</h2>
+        <p><strong>Direccion:</strong> R. do Antigo Aeroporto, 29 A - São Pedro, Barreiras - BA, 47810-894, Brasil</p>
+        <p><strong>Telefono:</strong> 555-555-5555 o puedes <a href="tel:+[555-555-5555]" class="btn btn-success">Llamarnos</a>
+        </p> 
+        <p><strong>Email:</strong> hotel_california@gmail.com</p>
+
+        <h2>Nuestra Ubicacion</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3900.7809634372866!2d-45.0038793!3d-12.127133899999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x934ab5cf0e25dea5%3A0x627f1049cd5bdf6!2sHotel%20California!5e0!3m2!1ses-419!2sbo!4v1678065517018!5m2!1ses-419!2sbo" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
+      
     </div>
   </div>
-
+<br>
+<br>
 
   <!--CONTENIDO-->
 
