--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="Servicios.html" style="color: white;">Servicios</a><!--LUIS-->
+            <a class="nav-link" href="services.html" style="color: white;">Servicios</a><!--LUIS-->
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Galeria.html" style="color: white;">Galeria de Imagenes</a><!--PABLO-->
