--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="services.html" style="color: white;">Servicios</a><!--LUIS-->
+            <a class="nav-link" href="services.html" style="color: white;">Servicios</a><!--OMAR-->
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Galeria.html" style="color: white;">Galeria de Imagenes</a><!--PABLO-->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contacto.html" style="color: white;">Contacto</a><!--OMAR-->
+            <a class="nav-link" href="contacto.html" style="color: white;">Contacto</a><!--LUIS-->
           </li>
         </ul>
         
