--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="Galeria.html" style="color: white;">Galeria de Imagenes</a><!--PABLO-->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Servicios.html" style="color: white;">Servicios</a><!--OMAR-->
+            <a class="nav-link" href="services-omar.html" style="color: white;">Servicios</a><!--OMAR-->
           </li>
         </ul>
         
