--- a/Nosotros.html
+++ b/Nosotros.html
@@ -28,7 +28,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="Contactos.html" style="color: white;">Contactos</a><!--LUIS-->
+            <a class="nav-link" href="contacto.html" style="color: white;">Contactos</a><!--LUIS-->
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Galeria.html" style="color: white;">Galeria de Imagenes</a><!--PABLO-->
