cambios al index

--- a/contacto.html
+++ b/contacto.html
@@ -185,27 +185,31 @@
             </font>
           </h5>
           <ul class="list-unstyled">
-            <li class="mb-2"><a href="/">
+            <li class="mb-2"><a href="#" style="text-decoration: none;">
+                <!-- <i class="fab fa-facebook-f icon-links"></i> -->
                 <font style="vertical-align: inherit;">
                   <font style="vertical-align: inherit;">Facebook</font>
                 </font>
               </a></li>
-            <li class="mb-2"><a href="/docs/5.2/">
+            <li class="mb-2"><a href="https://www.instagram.com/omardiegooblitas/" style="text-decoration: none;">
+                <!-- <i class="fab fa-instagram icon-links"></i> -->
                 <font style="vertical-align: inherit;">
                   <font style="vertical-align: inherit;">Instagram</font>
                 </font>
               </a></li>
-            <li class="mb-2"><a href="/docs/5.2/examples/">
+            <li class="mb-2"><a href="#" style="text-decoration: none;">
+                <!-- <i class="fab fa-twitter icon-links"></i> -->
                 <font style="vertical-align: inherit;">
                   <font style="vertical-align: inherit;">Twiter</font>
                 </font>
               </a></li>
-            <li class="mb-2"><a href="https://icons.getbootstrap.com/">
+            <li class="mb-2"><a href="#" style="text-decoration: none;" >
+                <!-- <i class="fab fa-whatsapp icon-links"></i> -->
                 <font style="vertical-align: inherit;">
                   <font style="vertical-align: inherit;">Whatsapp</font>
                 </font>
-              </a></li>
-            
+              </a>
+            </li>
           </ul>
         </div>
       </div>
