eliminacion de href innecesarios

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                   <font style="vertical-align: inherit;">Facebook</font>
                 </font>
               </a></li>
-            <li class="mb-2"><a href="https://www.instagram.com/omardiegooblitas/" style="text-decoration: none;">
+            <li class="mb-2"><a href="#" style="text-decoration: none;">
                 <!-- <i class="fab fa-instagram icon-links"></i> -->
                 <font style="vertical-align: inherit;">
                   <font style="vertical-align: inherit;">Instagram</font>
