eliminaciones de href

--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
             </font>
           </h5>
           <ul class="list-unstyled">
-            <li class="mb-2"><a href="/">
+            <li class="mb-2"><a href="#">
                 <font style="vertical-align: inherit;">
                   <font style="vertical-align: inherit;">Contactos</font>
                 </font>
               </a></li>
-            <li class="mb-2"><a href="/docs/5.2/">
+            <li class="mb-2"><a href="#">
                 <font style="vertical-align: inherit;">
                   <font style="vertical-align: inherit;">Guia</font>
                 </font>
               </a></li>
-            <li class="mb-2"><a href="/docs/5.2/examples/">
+            <li class="mb-2"><a href="#">
                 <font style="vertical-align: inherit;">
                   <font style="vertical-align: inherit;">Ubicacion</font>
                 </font>
@@ -152,27 +152,27 @@
             </font>
           </h5>
           <ul class="list-unstyled">
-            <li class="mb-2"><a href="/">
+            <li class="mb-2"><a href="#">
                 <font style="vertical-align: inherit;">
                   <font style="vertical-align: inherit;">Brayan</font>
                 </font>
               </a></li>
-            <li class="mb-2"><a href="/docs/5.2/">
+            <li class="mb-2"><a href="#">
                 <font style="vertical-align: inherit;">
                   <font style="vertical-align: inherit;">Luis</font>
                 </font>
               </a></li>
-            <li class="mb-2"><a href="/docs/5.2/examples/">
+            <li class="mb-2"><a href="#">
                 <font style="vertical-align: inherit;">
                   <font style="vertical-align: inherit;">Omar</font>
                 </font>
               </a></li>
-            <li class="mb-2"><a href="https://icons.getbootstrap.com/">
+            <li class="mb-2"><a href="#">
                 <font style="vertical-align: inherit;">
                   <font style="vertical-align: inherit;">Carla</font>
                 </font>
               </a></li>
-              <li class="mb-2"><a href="https://icons.getbootstrap.com/">
+              <li class="mb-2"><a href="#">
                 <font style="vertical-align: inherit;">
                   <font style="vertical-align: inherit;">Pablo</font>
                 </font>
