--- a/contacto.html
+++ b/contacto.html
@@ -73,10 +73,10 @@
           <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-5">
         <h2>Nuestro contacto directo</h2>
-        <p><strong>Direccion:</strong> R. do Antigo Aeroporto, 29 A - São Pedro, Barreiras - BA, 47810-894, Brasil</p>
-        <p><strong>Telefono:</strong> 555-555-5555 o puedes <a href="tel:+[555-555-5555]" class="btn btn-success">Llamarnos</a>
+        <p><strong>Direccion:</strong> Santa cruz, avenida Beni</p>
+        <p><strong>Telefono:</strong> 75689878 o puedes <a href="tel:+[75689878]" class="btn btn-success">Llamarnos</a>
         </p> 
         <p><strong>Email:</strong> hotel_california@gmail.com</p>
 
