estilos a las letras

--- a/index.html
+++ b/index.html
@@ -61,23 +61,23 @@
         <img src="https://www.murhotels.com/cache/40/b3/40b3566310d686be665d9775f59ca9cd.jpg" class="d-block w-100" alt="..." width="650px" height="650">
         
         <div class="carousel-caption d-none d-md-block" style="color: black;">
-          <h1 class="texto">HOTEL CALIFORNIA</h1>
+          <h1 class="texto texto-borde">HOTEL CALIFORNIA</h1>
           
-          <h3 class="texto-contenido">BIENVENIDOS HOTEL 5 ESTRELLAS CALIFORNIA BOLIVIA. DISFRUTA TU ESTADIA CON NOSOTROS.</h3>
+          <h3 class="texto-segundario">BIENVENIDOS HOTEL 5 ESTRELLAS CALIFORNIA BOLIVIA. DISFRUTA TU ESTADIA CON NOSOTROS.</h3>
         </div>
       </div>
       <div class="carousel-item">
         <img src="http://www.hotelcarina.com.tr/images/slider-main1.jpg" class="d-block w-100" alt="..." width="650px" height="650">
         <div class="carousel-caption d-none d-md-block" style="color: black;">
-          <h1 class="texto">HOTEL CALIFORNIA</h1>
-          <h3 class="texto-contenido">BIENVENIDOS HOTEL 5 ESTRELLAS CALIFORNIA BOLIVIA. DISFRUTA TU ESTADIA CON NOSOTROS.</h3>
+          <h1 class="texto texto-borde">HOTEL CALIFORNIA</h1>
+          <h3 class="texto-segundario">BIENVENIDOS HOTEL 5 ESTRELLAS CALIFORNIA BOLIVIA. DISFRUTA TU ESTADIA CON NOSOTROS.</h3>
         </div>
       </div>
       <div class="carousel-item">
         <img src="https://www.murhotels.com/uploads/cms/pages/vista-piscina-buenos-aires_ZB6b4al.jpg" class="d-block w-100" alt="..." width="650px" height="650">
         <div class="carousel-caption d-none d-md-block" style="color: black;">
-          <h1 class="texto">HOTEL CALIFORNIA</h1>
-          <h3 class="texto-contenido">BIENVENIDOS HOTEL 5 ESTRELLAS CALIFORNIA BOLIVIA. DISFRUTA TU ESTADIA CON NOSOTROS.</h3>
+          <h1 class="texto texto-borde">HOTEL CALIFORNIA</h1>
+          <h3 class="texto-segundario">BIENVENIDOS HOTEL 5 ESTRELLAS CALIFORNIA BOLIVIA. DISFRUTA TU ESTADIA CON NOSOTROS.</h3>
         </div>
       </div>
     </div>
