Fixed footer Luis

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
           <ul class="list-unstyled small text-muted">
             
             <li class="mb-2" style="text-align: center;" >
-              <img src="https://dypdvfcjkqkg2.cloudfront.net/large/2541052-1271.jpg" class="d-block w-100" alt="..." width="50px" height="150">
+              <img src="../hotel.github.io/img/logo hotel.png" class="d-block w-100" alt="..." width="50px" height="150">
+              <!--<img src="https://dypdvfcjkqkg2.cloudfront.net/large/2541052-1271.jpg" class="d-block w-100" alt="..." width="50px" height="150">-->
               
             </li>
 
