cambios nuevos de services

--- a/Portafolio.html
+++ b/Portafolio.html
@@ -30,7 +30,7 @@
           <a class="nav-link" href="contacto.html" style="color: white;">Contacto</a><!--LUIS-->
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Galeria.html" style="color: white;">Galeria de Imagenes</a><!--PABLO-->
+          <a class="nav-link" href="Portafolio.html" style="color: white;">Galeria de Imagenes</a><!--PABLO-->
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Services-omar.html" style="color: white;">Servicios</a><!--OMAR-->
