--- a/services-omar.html
+++ b/services-omar.html
@@ -66,7 +66,7 @@
           <a class="nav-link" href="contacto.html" style="color: white;">Contacto</a><!--LUIS-->
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Galeria.html" style="color: white;">Galeria de Imagenes</a><!--PABLO-->
+          <a class="nav-link" href="Portafolio.html" style="color: white;">Galeria de Imagenes</a><!--PABLO-->
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Services-omar.html" style="color: white;">Servicios</a><!--OMAR-->
@@ -85,19 +85,19 @@
           <div class="col-sm-6">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Habitación doble Estándar</h5>
+                <h5 class="card-title title-card-services">Habitación doble Estándar</h5>
                 <img src="./img/room04.jpg" alt="" class="img-room-content">
                 <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
-                <a href="#" class="btn btn-primary">Reservar</a>
+                <a href="#" class="btn btn-primary btn-services-card">Reservar</a>
               </div>
             </div>
           </div>
           <div class="col-sm-6">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Habitación doble Superior</h5>
+                <h5 class="card-title title-card-services">Habitación doble Superior</h5>
                 <img src="./img/room03.jpg" alt="" class="img-room-content">
-                <a href="#" class="btn btn-primary">Reservar</a>
+                <a href="#" class="btn btn-primary btn-services-card">Reservar</a>
               </div>
             </div>
           </div>
@@ -109,20 +109,20 @@
           <div class="col-sm-6">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Habitación doble De lujo</h5>
+                <h5 class="card-title title-card-services">Habitación doble De lujo</h5>
                 <img src="./img/room01.jpeg" alt="" class="img-room-content">
                 <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
-                <a href="#" class="btn btn-primary">Reservar</a>
+                <a href="#" class="btn btn-primary btn-services-card">Reservar</a>
               </div>
             </div>
           </div>
           <div class="col-sm-6">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Habitaciones dobles comunicadas</h5>
+                <h5 class="card-title title-card-services">Habitaciones dobles comunicadas</h5>
                 <img src="./img/room02.jpg" alt="" class="img-room-content">
                 <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
-                <a href="#" class="btn btn-primary">Reservar</a>
+                <a href="#" class="btn btn-primary btn-services-card">Reservar</a>
               </div>
             </div>
           </div>
