--- a/Nosotros.html
+++ b/Nosotros.html
@@ -11,7 +11,7 @@
 
 
   <!--NAVEGADOR-->
-  <nav class="navbar navbar-expand-lg" style="background-color: #37B7D4;">
+  <nav class="navbar navbar-expand-lg" style="background-color: rgb(51, 214, 243);">
     <div class="container-fluid" >
       <a class="navbar-brand" style="color: white;" href="#">Hotel California</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
