fix menu bar Luis Garey

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -26,15 +26,15 @@
           <li class="nav-item">
             <a class="nav-link" href="Nosotros.html" style="color: white;">Nosotros</a><!--CARLA-->
           </li>
-
+  
           <li class="nav-item">
-            <a class="nav-link" href="contacto.html" style="color: white;">Contactos</a><!--LUIS-->
+            <a class="nav-link" href="contacto.html" style="color: white;">Contacto</a><!--LUIS-->
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Portafolio.html" style="color: white;">Galeria de Imagenes</a><!--PABLO-->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services-omar.html" style="color: white;">Servicios</a><!--OMAR-->
+            <a class="nav-link" href="Services-omar.html" style="color: white;">Servicios</a><!--OMAR-->
           </li>
         </ul>
         
