--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
           <li class="nav-item">
             <a class="nav-link" href="Nosotros.html" style="color: white;">Nosotros</a><!--CARLA-->
           </li>
-
+  
           <li class="nav-item">
             <a class="nav-link" href="contacto.html" style="color: white;">Contacto</a><!--LUIS-->
           </li>
@@ -33,7 +33,7 @@
             <a class="nav-link" href="Portafolio.html" style="color: white;">Galeria de Imagenes</a><!--PABLO-->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services-omar.html" style="color: white;">Servicios</a><!--OMAR-->
+            <a class="nav-link" href="Services-omar.html" style="color: white;">Servicios</a><!--OMAR-->
           </li>
         </ul>
         
