quitando fondo de footer

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <!--CONTENIDO Footer-->
 
 
-  <footer style="background-color: rgb(51, 214, 243);">
+  <footer>
 
     <div class="contenedor">
 
