fixed sass Luis

--- a/contacto.html
+++ b/contacto.html
@@ -78,7 +78,7 @@
       <div class="col-md-5">
         <h2>Nuestro contacto directo</h2>
         <p><strong>Direccion:</strong> Santa cruz, avenida Beni</p>
-        <p><strong>Telefono:</strong> 75689878 o puedes <a href="tel:+[75689878]" class="btn btn-success">Llamarnos</a>
+        <p><strong>Telefono:</strong> 75689878 o puedes <a href="tel:+[75689878]" class="btn btn-test">Llamarnos</a>
         </p> 
         <p><strong>Email:</strong> hotel_california@gmail.com</p>
 
