actualizando con sass contacto

--- a/contacto.html
+++ b/contacto.html
@@ -71,7 +71,7 @@
             <textarea class="form-control" id="message" rows="5"></textarea>
           </div>
           <br>
-          <button type="submit" class="btn btn-primary">Enviar</button>
+          <button type="submit" class="btn btn-test2">Enviar</button>
         </form>
         <br>
       </div>
