--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 
   <!--NAVEGADOR-->
-  <nav class="navbar navbar-expand-lg" style="background-color: rgb(51, 214, 243);">
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid" >
-      <a class="navbar-brand" style="color: white;" href="#">Hotel California</a>
+      <a class="navbar-brand hot" href="#">Hotel California</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -21,20 +21,20 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html" style="color: white;">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="index.html" >Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Nosotros.html" style="color: white;">Nosotros</a><!--CARLA-->
+            <a class="nav-link title-nav" href="Nosotros.html" >Nosotros</a><!--CARLA-->
           </li>
   
           <li class="nav-item">
-            <a class="nav-link" href="contacto.html" style="color: white;">Contacto</a><!--LUIS-->
+            <a class="nav-link title-nav" href="contacto.html" >Contacto</a><!--LUIS-->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Portafolio.html" style="color: white;">Galeria de Imagenes</a><!--PABLO-->
+            <a class="nav-link title-nav" href="Portafolio.html" >Galeria de Imagenes</a><!--PABLO-->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services-omar.html" style="color: white;">Servicios</a><!--OMAR-->
+            <a class="nav-link title-nav" href="services-omar.html" >Servicios</a><!--OMAR-->
           </li>
         </ul>
         
@@ -240,7 +240,7 @@
 
 
     <div class="d-sm-flex justify-content-center justify-content-sm-between">
-      <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2023. TODOS LOS DERECHOS SON RESERVADOS.</span>
+      <span class="text-center text-sm-left d-block d-sm-inline-block textfoot">Copyright © 2023. TODOS LOS DERECHOS SON RESERVADOS.</span>
       <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">LOS BINARIOS <i class="far fa-heart text-danger"></i></span>
     </div>
   </footer>
