--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   
-    <link rel="stylesheet" href="style_luis.css" />
+    <link rel="stylesheet" href="luis_sass/style_luis.css" />
 
   <!--NAVEGADOR-->
   <nav class="navbar navbar-expand-lg" style="background-color: rgb(51, 214, 243);">
