--- a/Nosotros.html
+++ b/Nosotros.html
@@ -8,11 +8,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   
-   <link rel="stylesheet" href="style -carla.css">
+   <link rel="stylesheet" href="style_carla/style.css">
 
 
   <!--NAVEGADOR-->
-  <nav class="navbar navbar-expand-lg" style="background-color: rgb(51, 214, 243);">
+  <nav class="navbar navbar-expand-lg" >
     <div class="container-fluid" >
       <a class="navbar-brand" style="color: white;" href="#">Hotel California</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -167,7 +167,7 @@
 <!--CONTENIDO Footer-->
 
 
-<footer style="background-color: rgb(51, 214, 243);">
+<footer >
 
   <div class="contenedor">
 
@@ -197,17 +197,17 @@
           </font>
         </h5>
         <ul class="list-unstyled">
-          <li class="mb-2"><a href="#">
+          <li class="mb-2"><a href="#" style="text-decoration: none;">
               <font style="vertical-align: inherit;">
                 <font style="vertical-align: inherit;">Contactos</font>
               </font>
             </a></li>
-          <li class="mb-2"><a href="#">
+          <li class="mb-2"><a href="#" style="text-decoration: none;">
               <font style="vertical-align: inherit;">
                 <font style="vertical-align: inherit;">Guia</font>
               </font>
             </a></li>
-          <li class="mb-2"><a href="#">
+          <li class="mb-2"><a href="#" style="text-decoration: none;">
               <font style="vertical-align: inherit;">
                 <font style="vertical-align: inherit;">Ubicacion</font>
               </font>
@@ -224,27 +224,27 @@
           </font>
         </h5>
         <ul class="list-unstyled">
-          <li class="mb-2"><a href="#">
+          <li class="mb-2"><a href="#" style="text-decoration: none;">
               <font style="vertical-align: inherit;">
                 <font style="vertical-align: inherit;">Brayan</font>
               </font>
             </a></li>
-          <li class="mb-2"><a href="#">
+          <li class="mb-2"><a href="#" style="text-decoration: none;">
               <font style="vertical-align: inherit;">
                 <font style="vertical-align: inherit;">Luis</font>
               </font>
             </a></li>
-          <li class="mb-2"><a href="#">
+          <li class="mb-2"><a href="#" style="text-decoration: none;">
               <font style="vertical-align: inherit;">
                 <font style="vertical-align: inherit;">Omar</font>
               </font>
             </a></li>
-          <li class="mb-2"><a href="#">
+          <li class="mb-2"><a href="#" style="text-decoration: none;">
               <font style="vertical-align: inherit;">
                 <font style="vertical-align: inherit;">Carla</font>
               </font>
             </a></li>
-            <li class="mb-2"><a href="#">
+            <li class="mb-2"><a href="#" style="text-decoration: none;">
               <font style="vertical-align: inherit;">
                 <font style="vertical-align: inherit;">Pablo</font>
               </font>
